--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,45 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Peliculas Recientes</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <app-slidershow-backdrop [peliculas]="peliculasReciente"></app-slidershow-backdrop>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Cartelera</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <app-slideshow-poster [peliculas]="peliculasReciente"></app-slideshow-poster>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Tendencias esta semana</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <app-slidershow-backdrop [peliculas]="peliculaTendencias">
+
+  </app-slidershow-backdrop>
+
+
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Populares</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <app-slides-pares [peliculas]="populares" (cargarMas)="cargarMas()">
+  </app-slides-pares>
 </ion-content>
