--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,27 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Mi lista</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Mi lista</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <div *ngFor="let fg of favoritoGenero">
+    <ion-grid *ngIf="fg.pelis.length>0">
+      <ion-row>
+        <h4>{{fg.genero}}</h4>
+       </ion-row>
+    </ion-grid>
+    <app-slideshow-poster [peliculas]="fg.pelis"></app-slideshow-poster>
+  </div>
+
+
 </ion-content>
